# Code-of-the-World-2024

./: README.md
backend/: Makefile  alembic.ini  app.py  docker-compose.yml  pyproject.toml  test.py
backend/.docker/nginx/: nginx.conf
backend/configs/: Database.py
backend/conventors/: cv.py
backend/migrations/: env.py
backend/migrations/versions/: 33e662c94f96_fix.py  3e619ca3a7cd_fix_fk_career_profile.py  90ede10325c1_add_user.py  a57b0e652f26_init.py  d92fad978336_init.py  fbeb4ba91c8d_add_the_level_to_the_language.py
backend/ml/: SETTINGS.py  addons.py  init.py  ml.py  template_ml_for_api.py
backend/models/: __init__.py  cv.py  user.py
backend/parsing/: omega_parser.py  pdf_parser.py  test.py
backend/repositories/: cv.py
backend/routing/v1/: ml.py
backend/schemas/: cvschema.py
backend/services/: cv.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  ModalFilter.css  ModalFilter.jsx
