[tool.poetry]
name = "code-of-the-world"
version = "0.1.0"
description = ""
authors = ["kirill <shkolenko02-03-2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
alembic = "^1.11.3"
loguru = "^0.7.0"
ruff = "^0.3.7"
pre-commit = "^3.7.0"
llama-cpp-python = "^0.2.76"
psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
python-docx = "^1.1.2"
docx2txt2 = "^1.0.4"
pydocx = "^0.9.10"
pdfplumber = "^0.11.0"
pypdf2 = "^3.0.1"
pdf2image = "^1.17.0"
pdfminer= "20191125"
pptx2txt2 = "^1.1.0"
striprtf = "^0.0.26"
pytesseract = "^0.3.10"
markdown = "^3.6"
docx-parser = "^1.0.2"
pdfminer-six = "^20231228"
pymupdf = "^1.24.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
